Igualado diseño a listar animales

--- a/views/ListarAnimalesProtectora.ejs
+++ b/views/ListarAnimalesProtectora.ejs
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="/css/general.css">
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/listaranimalesprotectora.css">
+    <link rel="stylesheet" href="/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800,900&display=swap" rel="stylesheet">
+    
+
 </head>
 
 <body>
@@ -19,7 +23,7 @@
             <div class="row">
                 <div class="page-header">
                     <div class="col-md-12">
-                        <h2>Lista de los animales de la Protectora: XXXXXXX</h2>
+                        <h2>Lista de los animales de la Protectora: AmigosAnimales</h2>
                     </div>
                 </div>
             </div>
@@ -27,215 +31,103 @@
 
                 
                     
-                <div class="col-sm-4 col-md-3 col-lg-2">
-                    <div class="panel panel-default">
-                        <div class="panel-heading contenedor">
-                            <!-- Nombre -->
-                            <span>Pepe</span>
-                        </div>
-                        <div class="panel-body">
-                            <div class="contImg">
-                                 <!-- Imagen -->
-                                <img src="/">
-                            </div>
-                            <!-- Boton -->
-                            <div class="container">
-                                <form action="/animal" method="GET">
-                                    <input type="submit" class="btn btn-success ver" value="Ver perfil">
-                                    <input type="hidden" name="idAnimal" value="1">
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="col-sm-4 col-md-3 col-lg-2">
-                    <div class="panel panel-default">
-                        <div class="panel-heading contenedor">
-                            <!-- Nombre -->
-                            <span>Pedro</span>
-                        </div>
-                        <div class="panel-body">
-                            <div class="contImg">
-                                 <!-- Imagen -->
-                                <img src="/">
-                            </div>
-                            <!-- Boton -->
-                            <div class="container">
-                                <form action="/animal" method="GET">
-                                    <input type="submit" class="btn btn-success ver" value="Ver perfil">
-                                    <input type="hidden" name="idAnimal" value="2">
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="col-sm-4 col-md-3 col-lg-2">
-                    <div class="panel panel-default">
-                        <div class="panel-heading contenedor">
-                            <!-- Nombre -->
-                            <span>Alberto</span>
-                        </div>
-                        <div class="panel-body">
-                            <div class="contImg">
-                                 <!-- Imagen -->
-                                <img src="/">
-                            </div>
-                            <!-- Boton -->
-                            <div class="container">
-                                <form action="/animal" method="GET">
-                                    <input type="submit" class="btn btn-success ver" value="Ver perfil">
-                                    <input type="hidden" name="idAnimal" value="3">
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="col-sm-4 col-md-3 col-lg-2">
-                    <div class="panel panel-default">
-                        <div class="panel-heading contenedor">
-                            <!-- Nombre -->
-                            <span>Pepe</span>
-                        </div>
-                        <div class="panel-body">
-                            <div class="contImg">
-                                 <!-- Imagen -->
-                                <img src="/">
-                            </div>
-                            <!-- Boton -->
-                            <div class="container">
-                                <form action="/animal" method="GET">
-                                    <input type="submit" class="btn btn-success ver" value="Ver perfil">
-                                    <input type="hidden" name="idAnimal" value="1">
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="col-sm-4 col-md-3 col-lg-2">
-                    <div class="panel panel-default">
-                        <div class="panel-heading contenedor">
-                            <!-- Nombre -->
-                            <span>Pedro</span>
-                        </div>
-                        <div class="panel-body">
-                            <div class="contImg">
-                                 <!-- Imagen -->
-                                <img src="/">
-                            </div>
-                            <!-- Boton -->
-                            <div class="container">
-                                <form action="/animal" method="GET">
-                                    <input type="submit" class="btn btn-success ver" value="Ver perfil">
-                                    <input type="hidden" name="idAnimal" value="2">
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
                 
-                <div class="col-sm-4 col-md-3 col-lg-2">
-                    <div class="panel panel-default">
-                        <div class="panel-heading contenedor">
-                            <!-- Nombre -->
-                            <span>Alberto</span>
-                        </div>
-                        <div class="panel-body">
-                            <div class="contImg">
-                                 <!-- Imagen -->
-                                <img src="/">
+               <div class="row">
+                    
+
+                    <!-- Minina -->
+                    <div class="col">
+                        <div class="row d-flex justify-content-center" style="margin-bottom: 30px;">
+                            <div class="my-card">
+                                <img src="/resources/img/img-cat-1.jpg">
+                                <div class="card-body">
+                                    <div class="row">
+                                        <div class="col"><h5>Minina</h5></div>
+                                        <div class="col"><h6>2,5 años</h6></div>
+                                    </div>
+                                    <p>Hola, me llamo Minina y fui olvidado en el Parque del Oeste. Allí nadie se preocupaba por mi y pasé muchos meses viviendo en la calle hasta que un chico se dio cuenta de mi existencia y me empezó a poner de comer todos los días.</p>
+                                </div>
+                                <div class="row">
+                                    <div class="col my-card-information">
+                                        <i class="fas fa-map-marker-alt"></i> &nbsp; Valladolid
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-5 my-card-information">
+                                        <i class="fas fa-mars" style="font-size: 20px;"></i> &nbsp; Hembra
+                                    </div>
+                                    <div class="col my-card-information">
+                                        <i class="fas fa-weight-hanging"></i> &nbsp; 6,5 kg
+                                    </div>
+                                </div>
+                                
+                                <button type="button" class="my-card-button">Más Información</button>
                             </div>
-                            <!-- Boton -->
-                            <div class="container">
-                                <form action="/animal" method="GET">
-                                    <input type="submit" class="btn btn-success ver" value="Ver perfil">
-                                    <input type="hidden" name="idAnimal" value="3">
-                                </form>
+                        </div>
+                    </div>
+
+                    <!-- Bolita -->
+                    <div class="col">
+                        <div class="row d-flex justify-content-center" style="margin-bottom: 30px;">
+                            <div class="my-card">
+                                <img src="/resources/img/img-dog-2.jpg">
+                                <div class="card-body">
+                                    <div class="row">
+                                        <div class="col"><h5>Bolita</h5></div>
+                                        <div class="col"><h6>4 años</h6></div>
+                                    </div>
+                                    <p>Hola, me llamo Bolita y fui olvidado en el Parque del Oeste. Allí nadie se preocupaba por mi y pasé muchos meses viviendo en la calle hasta que un chico se dio cuenta de mi existencia y me empezó a poner de comer todos los días.</p>
+                                </div>
+                                <div class="row">
+                                    <div class="col my-card-information">
+                                        <i class="fas fa-map-marker-alt"></i> &nbsp; Valencia
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-5 my-card-information">
+                                        <i class="fas fa-mars" style="font-size: 20px;"></i> &nbsp; Hembra
+                                    </div>
+                                    <div class="col my-card-information">
+                                        <i class="fas fa-weight-hanging"></i> &nbsp; 14,5 kg
+                                    </div>
+                                </div>
+                                
+                                <button type="button" class="my-card-button">Más Información</button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Piolín -->
+                    <div class="col">
+                        <div class="row d-flex justify-content-center" style="margin-bottom: 30px;">
+                            <div class="my-card">
+                                <img src="/resources/img/img-bird-1.jpg">
+                                <div class="card-body">
+                                    <div class="row">
+                                        <div class="col"><h5>Piolín</h5></div>
+                                        <div class="col"><h6>1,5 años</h6></div>
+                                    </div>
+                                    <p>Hola, me llamo Piolín y fui olvidado en el Parque del Oeste. Allí nadie se preocupaba por mi y pasé muchos meses viviendo en la calle hasta que un chico se dio cuenta de mi existencia y me empezó a poner de comer todos los días.</p>
+                                </div>
+                                <div class="row">
+                                    <div class="col my-card-information">
+                                        <i class="fas fa-map-marker-alt"></i> &nbsp; Burgos
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-5 my-card-information">
+                                        <i class="fas fa-mars" style="font-size: 20px;"></i> &nbsp; Macho
+                                    </div>
+                                    <div class="col my-card-information">
+                                        <i class="fas fa-weight-hanging"></i> &nbsp; 0,25 kg
+                                    </div>
+                                </div>
+                                
+                                <button type="button" class="my-card-button">Más Información</button>
                             </div>
                         </div>
                     </div>
                 </div>
-
-
-                <div class="col-sm-4 col-md-3 col-lg-2">
-                    <div class="panel panel-default">
-                        <div class="panel-heading contenedor">
-                            <!-- Nombre -->
-                            <span>Pepe</span>
-                        </div>
-                        <div class="panel-body">
-                            <div class="contImg">
-                                 <!-- Imagen -->
-                                <img src="/">
-                            </div>
-                            <!-- Boton -->
-                            <div class="container">
-                                <form action="/animal" method="GET">
-                                    <input type="submit" class="btn btn-success ver" value="Ver perfil">
-                                    <input type="hidden" name="idAnimal" value="1">
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="col-sm-4 col-md-3 col-lg-2">
-                    <div class="panel panel-default">
-                        <div class="panel-heading contenedor">
-                            <!-- Nombre -->
-                            <span>Pedro</span>
-                        </div>
-                        <div class="panel-body">
-                            <div class="contImg">
-                                 <!-- Imagen -->
-                                <img src="/">
-                            </div>
-                            <!-- Boton -->
-                            <div class="container">
-                                <form action="/animal" method="GET">
-                                    <input type="submit" class="btn btn-success ver" value="Ver perfil">
-                                    <input type="hidden" name="idAnimal" value="2">
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                
-                <div class="col-sm-4 col-md-3 col-lg-2">
-                    <div class="panel panel-default">
-                        <div class="panel-heading contenedor">
-                            <!-- Nombre -->
-                            <span>Alberto</span>
-                        </div>
-                        <div class="panel-body">
-                            <div class="contImg">
-                                 <!-- Imagen -->
-                                 <img src="/">
-                            </div>
-                            <!-- Boton -->
-                            <div class="container">
-                                <form action="/animal" method="GET">
-                                    <input type="submit" class="btn btn-success ver" value="Ver perfil">
-                                    <input type="hidden" name="idAnimal" value="3">
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-
-                
-
                         
 
 
